--- a/figurasGeometricas/style.css
+++ b/figurasGeometricas/style.css
@@ -3,15 +3,39 @@
     margin: 0;
     padding: 0;
 }
+header {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    background-color: cadetblue;
+}
+header nav .icon-figuras {
+    list-style: none;
+}
+header .icon-figuras {
+    background-image: url('https://w7.pngwing.com/pngs/153/804/png-transparent-cube-art-geometric-shapes-photography-area-vector-space.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 100px;
+    height: 60px;
+}
+header h1 {
+    color:gold;
+    font-size: 40px;
+}
+
+/*estilos del main*/
 main {
-    margin-top: 50px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color:lavender;
     height: 100vh;
 }
-
 main .main-cuadrado {
+    padding-top: 40px;
     margin-bottom: 30px;
 }
 main .main-cuadrado form {
